Fixing bug 64642. This is a regression caused in my large content code reorg/cleanup that I did a few weeks ago, SetDocument on a from control was was forwarding the call to the wrong base class, it was calling nsGenericElement::SetDocument() in stead of nsGenericHTMLElement::SetDocument() and that caused style attributes to not get reparsed when form controls were added to a document. r=pollmann@netscape.com